fix bugs including charts overflow/filter application by status and serverName.

--- a/cu-manager-ui/app/styles/_monitoring.scss
+++ b/cu-manager-ui/app/styles/_monitoring.scss
@@ -18,7 +18,7 @@
   display: flex;
 
   & .monitor-group {
-    flex: 50%;
+    width: 50%;
 
     &:nth-child(even){
       padding-left: 1rem;
